--- a/refazendoex015/index.html
+++ b/refazendoex015/index.html
@@ -13,7 +13,6 @@
     <main>
         <section>
             <div>
-                <form action="post">
                     <p>
                         <label for="txano">Ano de nascimento</label>
                         <input type="number" name="txano" id="txano">
@@ -32,7 +31,9 @@
                     <p>
                         <input id="botao" type="button" value="Verificar" onclick="Verificar()">
                     </p>
-                </form>
+                    <p>
+                        <input type="button" value="Contar" onclick="contar()">
+                    </p>
             </div>
             <div id="res">
                 Preencha os dados a cima para obter o resultado!
