--- a/projetostestes/tela-loguin/index.html
+++ b/projetostestes/tela-loguin/index.html
@@ -28,7 +28,7 @@ rel='stylesheet'>
                     </label>
                     <a href="#">Esqueci minha senha</a>
                 </div>
-                <button class="login" type="submit">Loguin</button>
+                <button class="login" type="submit" onclick="login()">Loguin</button>
 
                 <div class="register-link">
                     <p>Não tem uma conta? <a href="#">Cadastre-se</a></p>
