--- a/projetostestes/tela-loguin/index.html
+++ b/projetostestes/tela-loguin/index.html
@@ -12,7 +12,7 @@ rel='stylesheet'>
 <body>
     <main class="container">
             <h1>Área de loguin</h1>
-            <form action="cadastro.php" method="post">
+            <form action="#" method="post">
                 <div class="input-box">
                     <input type="email" name="em" id="em" placeholder="USUARIO">
                     <i class="bx bxs-user"></i>
