--- a/projetostestes/tela-loguin/index.html
+++ b/projetostestes/tela-loguin/index.html
@@ -14,11 +14,11 @@ rel='stylesheet'>
             <h1>Área de loguin</h1>
             <form action="#" method="post">
                 <div class="input-box">
-                    <input type="email" name="em" id="em" placeholder="USUARIO">
+                    <input type="email" name="em" id="em" placeholder="USUARIO" required maxlength="35">
                     <i class="bx bxs-user"></i>
                 </div>
                 <div class="input-box">
-                    <input type="password" name="se" id="se" placeholder="SENHA">
+                    <input type="password" name="se" id="se" placeholder="SENHA" required minlength="8" maxlength="30">
                     <i class="bx bxs-lock-alt"></i>
                 </div>
                 <div class="remember-forgot">
