--- a/projetostestes/tela-loguin/index.html
+++ b/projetostestes/tela-loguin/index.html
@@ -12,13 +12,13 @@ rel='stylesheet'>
 <body>
     <main class="container">
             <h1>Área de loguin</h1>
-            <form action="#" method="post">
+            <form action="loginsc/lg.js" method="post">
                 <div class="input-box">
-                    <input type="email" name="em" id="em" placeholder="USUARIO" required maxlength="35">
+                    <input type="email" name="em" id="em" placeholder="USUARIO"  maxlength="35">
                     <i class="bx bxs-user"></i>
                 </div>
                 <div class="input-box">
-                    <input type="password" name="se" id="se" placeholder="SENHA" required minlength="8" maxlength="30">
+                    <input type="password" name="se" id="se" placeholder="SENHA" minlength="8" maxlength="30">
                     <i class="bx bxs-lock-alt"></i>
                 </div>
                 <div class="remember-forgot">
