--- a/teste/index.html
+++ b/teste/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Gerar Dados Aleatórios</title>
+    <title>Gerar Login</title>
     <style>
         /* Reset básico */
         * {
@@ -70,7 +70,7 @@
 </head>
 <body>
     <div class="container">
-        <h1>Gerar Dados Aleatórios</h1>
+        <h1>Gerar Login</h1>
         <button onclick="extrairDadosAleatorios()">Gerar Dados</button>
         <div id="resultado"></div>
     </div>
